# eventlet-eval

./: README.rst  pyproject.toml
eventlet_eval/: aws.py  cfg.py  flasky.py  locust.py  main.py
tests/: test_eventlet_eval.py
