[tool.poetry]
name = "eventlet-eval"
version = "0.1.0"
description = ""
authors = ["Uriel Mandujano <uriel@globus.org>"]

[tool.poetry.dependencies]
python = "^3.9"
eventlet = "^0.32.0"
boto3 = "^1.18.63"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
