[tool.poetry]
name = "eventlet-eval"
version = "0.1.0"
description = ""
authors = ["Uriel Mandujano <uriel@globus.org>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.18.63"
Flask = "^2.0.2"
gunicorn = {extras = ["eventlet"], version = "^20.1.0"}
locust = "^2.5.1"
eventlet = "0.30.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
